--- a/faqs.html
+++ b/faqs.html
@@ -13,6 +13,110 @@ permalink: /faqs/
             gtag('config', 'UA-152639461-1');
         </script>
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "FAQPage",
+              "mainEntity": [{
+                "@type": "Question",
+                "name": "How much do you charge?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "This would very much depend on the work to be carried out. Please 
+                  <a href=mailto:info@sybilmayard.com>get in touch</a> to arrange an initial 
+                  consultation, after which I can provide a detailed quote for your requirements."
+                }
+              }, {
+                "@type": "Question",
+                "name": "How long does the work take?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "The time it takes to complete the work would depend on what is involved. 
+                  A 5-page website could be completed in as little as 4 weeks depending on how 
+                  quickly I receive the required information. In order for the work to be 
+                  completed as soon as possible, please provide the required information promptly."
+                }
+              }, {
+                "@type": "Question",
+                "name": "What do I need to supply you with?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "<ul>
+                    <li>Copy and content for each page</li>
+                    <li>Branding guidelines</li>
+                    <li>Company logo</li>
+                    <li>Any partner logos</li>
+                    <li>High quality images (if you don’t have your own images, I can provide you 
+                        with links to free stock photos)</li>
+                    <li>Links to social media profiles</li>
+                    <li>Links to videos</li>
+                    <li>Access to your domain and hosting (if applicable)</li>
+                    <li>Examples of websites to use for inspiration</li>
+                </ul>
+                <p>Preferably, I would like to work with documents submitted via 
+                    <a href=https://drive.google.com>Google Drive</a> - I can provide you with a 
+                    link to a shared folder. Alternatively, please send me the content by email.
+                </p>"
+                }
+              }, {
+                "@type": "Question",
+                "name": "Which platforms do you develop on?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "<p>I develop websites on <a href=https://wordpress.org/>WordPress</a>, 
+                    <a href=https://www.wix.com/ >Wix</a>, <a href=https://www.shopify.co.uk/>
+                        Shopify</a> and <a href=https://www.squarespace.com/>Squarespace</a>.</p>"
+                }
+              }, {
+                "@type": "Question",
+                "name": "Would we need to meet in person?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text":"Until further notice, all meetings will be via <a href=https://zoom.us/>Zoom</a>, 
+                    <a href=https://meet.google.com/>Google Meet</a>, 
+                    <a href=https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free>
+                        Microsoft Teams</a> or 
+                    <a href=https://whereby.com/>Whereby</a>."
+                }
+            }, {
+                "@type": "Question",
+                "name": "What is the process for developing a website?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"The first step would be to arrange a free consultation to discuss your 
+                    requirements. After this initial meeting, I would provide you with detailed 
+                    quote. If you are happy to proceed, I will send you an agreement. Once the 
+                    agreement has been signed by both of us, I will proceed with the work."
+                }
+            }, {
+                "@type": "Question",
+                "name": "Can I see examples of your previous work?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"Of course, please see my <a href=https://sybilmayard.com/clients>Clients</a> 
+                    page for examples of past work I have carried out for clients."
+                }
+            }, {
+                "@type": "Question",
+                "name": "What are your qualifications?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"I hold an MSc in Computer Science from the University of Kent."
+                }
+            }, {
+                "@type": "Question",
+                "name": "I cannot find the answer to my question in these FAQs. How can I contact 
+                you?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"Please get in touch with me by emailing 
+                    <a href=mailto:info@sybilmayard.com>info@sybilmayard.com</a>."
+                }
+            }
+                
+                ]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FAQs | Website Development & E-Commerce | Sybiltech</title>       
@@ -107,10 +211,10 @@ permalink: /faqs/
                     <hr>
                 </div>
                 <h3>How much do you charge?</h3>
-                <p>This would very much depend on the work to be carried out. Please get in touch to arrange an initial consultation, after which I can provide a detailed quote for your requirements.</p>
+                <p>This would very much depend on the work to be carried out. Please <a href="mailto:info@sybilmayard.com">get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for your requirements.</p>
 
                 <h3>How long does the work take?</h3>
-                <p>The time it takes to complete the work would depend on what is involved. A 5-page website could be completed in as little as 4-6 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly.</p>
+                <p>The time it takes to complete the work would depend on what is involved. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly.</p>
                 <h3>What do I need to supply you with?</h3>
                 <ul>
                     <li>Copy and content for each page</li>
