--- a/404.html
+++ b/404.html
@@ -147,7 +147,7 @@
                         <h4>Get in Touch</h4>
                         <p><a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a></p>
                         <p>
-                            <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
                             <a href="https://facebook.com/sybiltech" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook-f"></i></a>
