--- a/clients.html
+++ b/clients.html
@@ -297,16 +297,38 @@ permalink: /clients/
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.PNG" alt="Wardell's Wardrobe">                         
+                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-8">
                             <h2>Wardell's Wardrobe (Shopify)</h2>
                             <ul>
                                 <li>Colour swatches</li>
+				<li>Out of stock email notifications</li>
+				<li>Theme customisations</li>
 				<li>Google Search Console submission</li>
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+		<div id="bamboo-wardrobe" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-4">   
+                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
+                        </div>
+                        <div class="col-8">
+                            <h2>The Bamboo Wardrobe (Wix)</h2>
+                            <ul>
+                                <li>Website design improvements</li>
+				<li>E-commerce setup (products and email notifications)</li>
+				<li>Google Search Console submission</li>
+                            </ul>  
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://thebamboowardrobe.com"
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
