--- a/clients.html
+++ b/clients.html
@@ -106,17 +106,38 @@ permalink: /clients/
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
 
-                <div id="pathways-21"class="shadow-box-2">
+                <div id="events-meets-world" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="https://sybilmayard.com/images/clients/Pathways-21.png" alt="Pathways 21">
+                            <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" alt="Screenshot of the Events Meets World home page">
+                        </div>
+                        <div class="col-8">
+                            <h2>Events Meets World (Wix)</h2>
+                            <ul>
+                                <li>Newsletter popup form</li>
+                                <li>Newsletter embedded form</li>
+                                <li>Email campaigns</li>
+                                <li>Website review</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://eventsmeetsworld.co.uk" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="pathways-21" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" alt="Screenshot of the Pathways 21 home page">
                         </div>
                         <div class="col-8">
                             <h2>Pathways 21 (WordPress)</h2>
                             <ul>
                                 <li>Full website development</li>
                                 <li>Google Analytics integration</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://pathways21.com" 
@@ -129,7 +150,7 @@ permalink: /clients/
                 <div id="cnt-associates" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/CNT-Associates.png" alt="CNT Associates">                         
+                            <img src="https://sybilmayard.com/images/clients/CNT-Associates.jpg" alt="Screenshot of the CNT Associates home page">                         
                         </div>
                         <div class="col-8">
                             <h2>CNT Associates</h2>
@@ -148,7 +169,7 @@ permalink: /clients/
                 <div id="find-the-balance" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/find-the-balance.PNG" alt="Find the Balance">                         
+                            <img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" alt="Screenshot of the Find the Balance home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Find the Balance (Squarespace)</h2>
@@ -167,7 +188,7 @@ permalink: /clients/
                 <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">                         
+                            <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" alt="Screenshot of the Audrey Zeitoun Coaching home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Audrey Zeitoun Coaching (Wix)</h2>
@@ -175,7 +196,7 @@ permalink: /clients/
                                 <li>Full website development</li>
                                 <li>Search engine optimisation</li>
                                 <li>MailerLite integration</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
@@ -188,15 +209,15 @@ permalink: /clients/
                 <div id="blue-horizon-lnw" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Blue-Horizon-LNW.png" alt="Blue Horizon LNW">                         
+                            <img src="https://sybilmayard.com/images/clients/Blue-Horizon-LNW.jpg" alt="Screenshot of the Blue Horizon LNW home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Blue Horizon LNW (Bandzoogle)</h2>
                             <ul>
                                 <li>Full website development</li>
                                 <li>Custom domain setup</li>
-				<li>Google Analytics integration</li>
-				<li>Google Search Console submission</li>
+                                <li>Google Analytics integration</li>
+                                <li>Google Search Console submission</li>
                             </ul>              
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.bluehorizonlnw.com"
@@ -209,14 +230,14 @@ permalink: /clients/
                 <div id="tania-paige-designs" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/tania-paige-designs.PNG" alt="Tania Paige Designs">                         
+                            <img src="https://sybilmayard.com/images/clients/tania-paige-designs.jpg" alt="Screenshot of the Tania Paige Designs home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Tania Paige Designs (Shopify)</h2>
                             <ul>
                                 <li>Search engine optimisation</li>
                                 <li>Design improvements</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.taniapaigedesigns.org"
@@ -229,7 +250,7 @@ permalink: /clients/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/New-Haw-Community-Centre.png" alt="New Haw Community Centre">                         
+                            <img src="https://sybilmayard.com/images/clients/New-Haw-Community-Centre.jpg" alt="Screenshot of the New Haw Community Centre home page">                         
                         </div>
                         <div class="col-8">
                             <h2>New Haw Community Centre (WordPress)</h2>
@@ -238,7 +259,7 @@ permalink: /clients/
                                 <li>Theme customisations</li>
                                 <li>Search engine optimisation</li>
                                 <li>Blog publishing</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
@@ -251,7 +272,7 @@ permalink: /clients/
                 <div id="esme-learning-solutions" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Esme-Learning-Solutions.png" alt="Esme Learning Solutions">                         
+                            <img src="https://sybilmayard.com/images/clients/Esme-Learning-Solutions.jpg" alt="Screenshot of the Esme Learning Solutions home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Esme Learning Solutions (Shopify)</h2>
@@ -275,7 +296,7 @@ permalink: /clients/
                 <div id="future-communities-uk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Future-Communities-UK.png" alt="Future Communities UK">                         
+                            <img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" alt="Screenshot of the Future Communities UK home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Future Communities UK (WordPress)</h2>
@@ -284,7 +305,7 @@ permalink: /clients/
                                 <li>Full website development</li>
                                 <li>Google Analytics integration</li>
                                 <li>Mailchimp integration</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
@@ -297,15 +318,15 @@ permalink: /clients/
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Wardell's Wardrobe">                         
+                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Screenshot of the Wardell's Wardrobe home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Wardell's Wardrobe (Shopify)</h2>
                             <ul>
                                 <li>Colour swatches</li>
-				<li>Out of stock email notifications</li>
-				<li>Theme customisations</li>
-				<li>Google Search Console submission</li>
+                                <li>Out of stock email notifications</li>
+                                <li>Theme customisations</li>
+                                <li>Google Search Console submission</li>
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
@@ -318,14 +339,14 @@ permalink: /clients/
 		<div id="bamboo-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
+                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="Screenshot of The Bamboo Wardrobe home page">                         
                         </div>
                         <div class="col-8">
                             <h2>The Bamboo Wardrobe (Wix)</h2>
                             <ul>
                                 <li>Website design improvements</li>
-				<li>E-commerce setup (products and email notifications)</li>
-				<li>Google Search Console submission</li>
+                                <li>E-commerce setup (products and email notifications)</li>
+                                <li>Google Search Console submission</li>
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://thebamboowardrobe.com"
@@ -338,7 +359,7 @@ permalink: /clients/
                 <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">                         
+                            <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" alt="Screenshot of The GDPR Compliance Consultancy home page">                         
                         </div>
                         <div class="col-8">
                             <h2>The GDPR Compliance Consultancy (WordPress)</h2>
@@ -358,7 +379,7 @@ permalink: /clients/
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/SwipSearch.png" alt="SwipSearch">                         
+                            <img src="https://sybilmayard.com/images/clients/SwipSearch.jpg" alt="Screenshot of the SwipSearch home page">                         
                         </div>
                         <div class="col-8">
                             <h2>SwipSearch (Wix)</h2>
@@ -377,7 +398,7 @@ permalink: /clients/
                 <div id="kyosk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/KYOSK.png" alt="KYOSK">                         
+                            <img src="https://sybilmayard.com/images/clients/KYOSK.jpg" alt="Screenshot of the KYOSK home page">                         
                         </div>
                         <div class="col-8">
                             <h2>KYOSK (Shopify)</h2>
@@ -386,7 +407,7 @@ permalink: /clients/
                                 <li>Theme customisations</li>
                                 <li>Image gallery carousel with Slick</li>
                                 <li>Chatbot setup (Tidio)</li>
-				<li>Google Search Console submission</li>
+				                <li>Google Search Console submission</li>
                             </ul>          
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://kyosk.co"
@@ -399,7 +420,7 @@ permalink: /clients/
                 <div id="focus-on-learning" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/focus-on-learning.PNG" alt="Focus on Learning">                         
+                            <img src="https://sybilmayard.com/images/clients/focus-on-learning.jpg" alt="Screenshot of the Focus on Learning home page">                         
                         </div>
                         <div class="col-8">
                             <h2>Focus on Learning (Squarespace)</h2>
