--- a/website-design.html
+++ b/website-design.html
@@ -13,13 +13,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Design | Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here. ">
+        <meta name="Description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Design | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here. " />
+        <meta property="og:description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here." />
         <meta property="og:url" content="https://sybiltec.com/website-design" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -83,13 +83,15 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
-                <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. </p>
+                <h2>The Service</h2>
+                <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or the surrounding areas? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
 
-                <p>I will present the website designs to you either via a <a href="https://figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link, or I will send you the JPEG images attached to an email.</p> 
+                <h2>The Process</h2>
+                <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you either via a Figma link, or I will send you the JPEG images attached to an email. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
-                <p>Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (<a href="https://wix.com/" target="_blank" rel="noopener noreferrer">Wix</a>, <a href="https://wordpress.org/" target="_blank" rel="noopener noreferrer">WordPress</a> or <a href="https://shopify.co.uk/" target="_blank" rel="noopener noreferrer">Shopify</a>).</p>
+                <p>Take a look at the examples below of websites I have designed for past clients.</p>
 
-                <h2 class="padding-top">Website Design Clients</h2>
+                <h2 class="padding-top">Web Design Clients</h2>
 
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
